--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@types/glob": "^7.1.4",
+        "@types/node": "^20.8.8",
         "@types/yaml": "^1.9.7",
         "@typescript-eslint/eslint-plugin": "^4.32.0",
         "@typescript-eslint/parser": "^4.32.0",
@@ -33,10 +34,9 @@
         "prettier": "^2.4.1",
         "pretty-quick": "^3.1.1",
         "ts-node": "^10.2.1",
-        "typescript": "^4.4.3"
+        "typescript": "^4.9.5"
     },
     "dependencies": {
-        "@types/node": "16.10.2",
         "commander": "8.2.0",
         "dotenv": "^10.0.0",
         "glob": "^7.2.0",
