--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rokka-stacks-generator",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Generate and upload rokka.io stacks based on yml files in a component folder.",
     "main": "./dist/index.js",
     "bin": {
@@ -17,6 +17,7 @@
         "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
         "start": "ts-node -r dotenv/config src/index.ts -f ../test -o ../test/output/styles.json",
         "test": "ts-node -r dotenv/config src/index.ts -f ./../../../frontend/components -o ./../../../frontend/rokka/styles.json",
+        "test-upload": "ts-node -r dotenv/config src/upload.ts -j ./../../../frontend/rokka/styles.json",
         "build": "tsc -p .",
         "lint": "tsc --noEmit && eslint . --ext .js,.jsx,.ts,.tsx",
         "pretty": "prettier --write '**/*.{js,ts}'"
